@@ -2,242 +2,227 @@ package su.nightexpress.excellentenchants.enchantment.menu;
 
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
-import org.bukkit.entity.Player;
 import org.bukkit.event.inventory.InventoryType;
+import org.bukkit.inventory.Inventory;
 import org.bukkit.inventory.ItemStack;
 import org.jetbrains.annotations.NotNull;
-import su.nexmedia.engine.api.config.JOption;
-import su.nexmedia.engine.api.config.JYML;
-import su.nexmedia.engine.api.menu.AutoPaged;
-import su.nexmedia.engine.api.menu.MenuItemType;
-import su.nexmedia.engine.api.menu.click.ClickHandler;
-import su.nexmedia.engine.api.menu.click.ItemClick;
-import su.nexmedia.engine.api.menu.impl.ConfigMenu;
-import su.nexmedia.engine.api.menu.impl.MenuOptions;
-import su.nexmedia.engine.api.menu.impl.MenuViewer;
-import su.nexmedia.engine.api.menu.item.MenuItem;
-import su.nexmedia.engine.utils.Colorizer;
-import su.nexmedia.engine.utils.ItemReplacer;
-import su.nexmedia.engine.utils.ItemUtil;
-import su.nexmedia.engine.utils.PDCUtil;
-import su.nightexpress.excellentenchants.ExcellentEnchants;
+import su.nightexpress.excellentenchants.ExcellentEnchantsPlugin;
+import su.nightexpress.excellentenchants.api.enchantment.EnchantmentData;
+import su.nightexpress.excellentenchants.api.DistributionWay;
 import su.nightexpress.excellentenchants.config.Config;
-import su.nightexpress.excellentenchants.enchantment.impl.ExcellentEnchant;
+import su.nightexpress.excellentenchants.enchantment.data.CustomDistribution;
 import su.nightexpress.excellentenchants.enchantment.registry.EnchantRegistry;
-import su.nightexpress.excellentenchants.enchantment.type.ObtainType;
 import su.nightexpress.excellentenchants.enchantment.util.EnchantUtils;
+import su.nightexpress.nightcore.config.ConfigValue;
+import su.nightexpress.nightcore.config.FileConfig;
+import su.nightexpress.nightcore.core.CoreLang;
+import su.nightexpress.nightcore.menu.MenuOptions;
+import su.nightexpress.nightcore.menu.MenuViewer;
+import su.nightexpress.nightcore.menu.api.AutoFill;
+import su.nightexpress.nightcore.menu.api.AutoFilled;
+import su.nightexpress.nightcore.menu.impl.ConfigMenu;
+import su.nightexpress.nightcore.menu.item.ItemHandler;
+import su.nightexpress.nightcore.menu.item.MenuItem;
+import su.nightexpress.nightcore.util.*;
 
 import java.util.*;
 import java.util.function.Predicate;
 import java.util.stream.IntStream;
 
-import static su.nexmedia.engine.utils.Colors2.*;
 import static su.nightexpress.excellentenchants.Placeholders.*;
+import static su.nightexpress.nightcore.util.text.tag.Tags.*;
 
-public class EnchantmentsListMenu extends ConfigMenu<ExcellentEnchants> implements AutoPaged<ExcellentEnchant> {
+public class EnchantmentsListMenu extends ConfigMenu<ExcellentEnchantsPlugin> implements AutoFilled<EnchantmentData> {
 
-    private static final String FILE = "enchants.yml";
+    private static final String FILE_NAME = "enchants.yml";
 
     private static final String PLACEHOLDER_CONFLICTS = "%conflicts%";
     private static final String PLACEHOLDER_CHARGES   = "%charges%";
     private static final String PLACEHOLDER_OBTAINING = "%obtaining%";
 
-    private final NamespacedKey                        keyLevel;
+    private final NamespacedKey keyLevel;
     private final Map<String, Map<Integer, ItemStack>> iconCache;
 
-    private String       enchantName;
+    private ItemStack enchantIcon;
+    private String enchantName;
     private List<String> enchantLoreMain;
     private List<String> enchantLoreConflicts;
     private List<String> enchantLoreCharges;
     private List<String> enchantLoreObtaining;
-    private int[]        enchantSlots;
+    private int[] enchantSlots;
 
-    public EnchantmentsListMenu(@NotNull ExcellentEnchants plugin) {
-        super(plugin, new JYML(plugin.getDataFolder() + Config.DIR_MENU, FILE));
+    public EnchantmentsListMenu(@NotNull ExcellentEnchantsPlugin plugin) {
+        super(plugin, FileConfig.loadOrExtract(plugin, Config.DIR_MENU, FILE_NAME));
         this.keyLevel = new NamespacedKey(plugin, "list_display_level");
         this.iconCache = new HashMap<>();
-
-        this.registerHandler(MenuItemType.class)
-            .addClick(MenuItemType.CLOSE, ClickHandler.forClose(this))
-            .addClick(MenuItemType.PAGE_NEXT, ClickHandler.forNextPage(this))
-            .addClick(MenuItemType.PAGE_PREVIOUS, ClickHandler.forPreviousPage(this));
 
         this.load();
     }
 
-    @Override
     public void clear() {
         super.clear();
         this.iconCache.clear();
     }
 
-    // ----------
-
-    @Override
-    public boolean isCodeCreation() {
-        return true;
-    }
-
     @Override
     protected void loadAdditional() {
-        this.enchantName = JOption.create("Enchantment.Name", ENCHANTMENT_NAME_FORMATTED).read(cfg);
+        this.enchantIcon = ConfigValue.create("Enchantment.Icon", new ItemStack(Material.ENCHANTED_BOOK)).read(this.cfg);
 
-        this.enchantLoreMain = JOption.create("Enchantment.Lore.Main",
+        this.enchantName = ConfigValue.create("Enchantment.Name", ENCHANTMENT_NAME_FORMATTED).read(this.cfg);
+
+        this.enchantLoreMain = ConfigValue.create("Enchantment.Lore.Main",
             Arrays.asList(
-                ENCHANTMENT_DESCRIPTION,
-                DARK_GRAY + "(click to switch level)",
+                ENCHANTMENT_RARITY,
                 "",
-                LIGHT_YELLOW + BOLD + "Info:",
-                LIGHT_YELLOW + "▪ " + LIGHT_GRAY + "Tier: " + LIGHT_YELLOW + ENCHANTMENT_TIER,
-                LIGHT_YELLOW + "▪ " + LIGHT_GRAY + "Applies to: " + LIGHT_YELLOW + ENCHANTMENT_FIT_ITEM_TYPES,
-                LIGHT_YELLOW + "▪ " + LIGHT_GRAY + "Levels: " + LIGHT_YELLOW + ENCHANTMENT_LEVEL_MIN + GRAY + " - " + LIGHT_YELLOW + ENCHANTMENT_LEVEL_MAX,
+                ENCHANTMENT_DESCRIPTION_REPLACED,
+                DARK_GRAY.enclose("(click to switch levels)"),
+                "",
+                LIGHT_YELLOW.enclose(BOLD.enclose("Info:")),
+                LIGHT_YELLOW.enclose("▪ " + LIGHT_GRAY.enclose("Applies to: ") + ENCHANTMENT_FIT_ITEM_TYPES),
+                LIGHT_YELLOW.enclose("▪ " + LIGHT_GRAY.enclose("Levels: ") + ENCHANTMENT_LEVEL_MIN + LIGHT_GRAY.enclose(" - ") + ENCHANTMENT_LEVEL_MAX),
                 PLACEHOLDER_CHARGES,
                 PLACEHOLDER_CONFLICTS,
                 PLACEHOLDER_OBTAINING
-            )).read(cfg);
+            )).read(this.cfg);
 
-        this.enchantLoreConflicts = JOption.create("Enchantment.Lore.Conflicts",
-            Arrays.asList(
+        this.enchantLoreConflicts = ConfigValue.create("Enchantment.Lore.Conflicts",
+            List.of(
                 "",
-                LIGHT_RED + BOLD + "Conflicts:",
-                LIGHT_RED + "✘ " + LIGHT_GRAY + GENERIC_NAME
-            )).read(cfg);
+                LIGHT_RED.enclose(BOLD.enclose("Conflicts:")),
+                LIGHT_RED.enclose("✘ ") + LIGHT_GRAY.enclose(GENERIC_NAME)
+            )).read(this.cfg);
 
-        this.enchantLoreCharges = JOption.create("Enchantment.Lore.Charges",
-            Arrays.asList(
-                LIGHT_YELLOW + "▪ " + LIGHT_GRAY + "Charges: " + LIGHT_YELLOW + ENCHANTMENT_CHARGES_MAX_AMOUNT + "⚡" + LIGHT_GRAY + " (" + WHITE + ENCHANTMENT_CHARGES_FUEL_ITEM + LIGHT_GRAY + ")"
-            )).read(cfg);
+        this.enchantLoreCharges = ConfigValue.create("Enchantment.Lore.Charges",
+            List.of(
+                LIGHT_YELLOW.enclose("▪ " + LIGHT_GRAY.enclose("Charges: ") + GENERIC_AMOUNT + "⚡" + LIGHT_GRAY.enclose(" (" + WHITE.enclose(GENERIC_ITEM) + ")")))
+        ).read(this.cfg);
 
-        this.enchantLoreObtaining = JOption.create("Enchantment.Lore.Obtaining",
-            Arrays.asList(
+        this.enchantLoreObtaining = ConfigValue.create("Enchantment.Lore.Obtaining",
+            List.of(
                 "",
-                LIGHT_GREEN + BOLD + "Obtaining:",
-                LIGHT_GREEN + "✔ " + LIGHT_GRAY + GENERIC_TYPE
-            )).read(cfg);
+                LIGHT_GREEN.enclose(BOLD.enclose("Obtaining:")),
+                LIGHT_GREEN.enclose("✔ ") + LIGHT_GRAY.enclose(GENERIC_TYPE))
+        ).read(this.cfg);
 
-        this.enchantSlots = new JOption<int[]>("Enchantment.Slots",
-            (cfg, path, def) -> cfg.getIntArray(path),
-            () -> IntStream.range(0, 27).toArray()
-        ).setWriter(JYML::setIntArray).read(cfg);
+        this.enchantSlots = ConfigValue.create("Enchantment.Slots", IntStream.range(0, 27).toArray()).read(this.cfg);
     }
 
-    @Override
     @NotNull
     protected MenuOptions createDefaultOptions() {
-        return new MenuOptions(DARK_GRAY + BOLD + "Custom Enchants", 36, InventoryType.CHEST);
+        return new MenuOptions(BLACK.enclose("Custom Enchantments"), 36, InventoryType.CHEST);
     }
 
-    @Override
     @NotNull
     protected List<MenuItem> createDefaultItems() {
         List<MenuItem> list = new ArrayList<>();
 
-        ItemStack nextPageStack = ItemUtil.createCustomHead("eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvZjMyY2E2NjA1NmI3Mjg2M2U5OGY3ZjMyYmQ3ZDk0YzdhMGQ3OTZhZjY5MWM5YWMzYTkxMzYzMzEzNTIyODhmOSJ9fX0=");
-        ItemUtil.mapMeta(nextPageStack, meta -> {
-            meta.setDisplayName(WHITE + "Next Page" + LIGHT_GRAY + " (→)");
-        });
+        ItemStack nextPageStack = ItemUtil.getSkinHead(SKIN_ARROW_RIGHT);
+        ItemUtil.editMeta(nextPageStack, meta -> meta.setDisplayName(CoreLang.EDITOR_ITEM_NEXT_PAGE.getLocalizedName()));
 
-        ItemStack prevPageStack = ItemUtil.createCustomHead("eyJ0ZXh0dXJlcyI6eyJTS0lOIjp7InVybCI6Imh0dHA6Ly90ZXh0dXJlcy5taW5lY3JhZnQubmV0L3RleHR1cmUvODY5NzFkZDg4MWRiYWY0ZmQ2YmNhYTkzNjE0NDkzYzYxMmY4Njk2NDFlZDU5ZDFjOTM2M2EzNjY2YTVmYTYifX19");
-        ItemUtil.mapMeta(prevPageStack, meta -> {
-            meta.setDisplayName(LIGHT_GRAY + "(←) " + WHITE + "Previous Page");
-        });
+        ItemStack prevPageStack = ItemUtil.getSkinHead(SKIN_ARROW_LEFT);
+        ItemUtil.editMeta(prevPageStack, meta -> meta.setDisplayName(CoreLang.EDITOR_ITEM_PREVIOUS_PAGE.getLocalizedName()));
 
-        list.add(new MenuItem(nextPageStack).setSlots(35).setType(MenuItemType.PAGE_NEXT).setPriority(5));
-        list.add(new MenuItem(prevPageStack).setSlots(27).setType(MenuItemType.PAGE_PREVIOUS).setPriority(5));
+        list.add(new MenuItem(nextPageStack).setSlots(35).setHandler(ItemHandler.forNextPage(this)).setPriority(5));
+        list.add(new MenuItem(prevPageStack).setSlots(27).setHandler(ItemHandler.forPreviousPage(this)).setPriority(5));
 
         return list;
     }
 
-    // -----------
-
     @Override
     public void onPrepare(@NotNull MenuViewer viewer, @NotNull MenuOptions options) {
-        super.onPrepare(viewer, options);
-        this.getItemsForPage(viewer).forEach(this::addItem);
+        this.autoFill(viewer);
     }
 
     @Override
-    public int[] getObjectSlots() {
-        return this.enchantSlots;
+    protected void onReady(@NotNull MenuViewer viewer, @NotNull Inventory inventory) {
+
     }
 
     @Override
-    @NotNull
-    public List<ExcellentEnchant> getObjects(@NotNull Player player) {
-        return new ArrayList<>(EnchantRegistry.getRegistered().stream()
-            .filter(Predicate.not(enchant -> enchant.getDefaults().isHiddenFromList()))
-            .sorted(Comparator.comparing(e -> Colorizer.restrip(e.getDisplayName()))).toList());
-    }
-
-    @Override
-    @NotNull
-    public ItemStack getObjectStack(@NotNull Player player, @NotNull ExcellentEnchant enchant) {
-        return this.getEnchantIcon(enchant, 1);
-    }
-
-    @Override
-    @NotNull
-    public ItemClick getObjectClick(@NotNull ExcellentEnchant enchant) {
-        return (viewer, event) -> {
+    public void onAutoFill(@NotNull MenuViewer viewer, @NotNull AutoFill<EnchantmentData> autoFill) {
+        autoFill.setSlots(this.enchantSlots);
+        autoFill.setItems(EnchantRegistry.getRegistered().stream()
+            .filter(Predicate.not(EnchantmentData::isHiddenFromList))
+            .sorted(Comparator.comparing(data -> Colorizer.restrip(data.getName())))
+            .toList()
+        );
+        autoFill.setItemCreator(enchantmentData -> this.getEnchantIcon(enchantmentData, 1));
+        autoFill.setClickAction(enchantmentData -> (viewer1, event) -> {
             if (!event.isLeftClick()) return;
 
-            ItemStack itemClick = event.getCurrentItem();
-            if (itemClick == null) return;
+            ItemStack currentItem = event.getCurrentItem();
+            if (currentItem == null) return;
 
-            int levelHas = PDCUtil.getInt(itemClick, this.keyLevel).orElse(0);
-            if (levelHas == 0) levelHas = enchant.getStartLevel();
-
-            if (++levelHas > enchant.getMaxLevel()) levelHas = enchant.getStartLevel();
-            itemClick = this.getEnchantIcon(enchant, levelHas);
-            PDCUtil.set(itemClick, this.keyLevel, levelHas);
-
-            event.setCurrentItem(itemClick);
-        };
+            int levelHas = PDCUtil.getInt(currentItem, this.keyLevel).orElse(0);
+            if (levelHas == 0) {
+                levelHas = enchantmentData.getMinLevel();
+            }
+            if (++levelHas > enchantmentData.getMaxLevel()) {
+                levelHas = enchantmentData.getMinLevel();
+            }
+            currentItem = this.getEnchantIcon(enchantmentData, levelHas);
+            PDCUtil.set(currentItem, this.keyLevel, levelHas);
+            event.setCurrentItem(currentItem);
+        });
     }
 
-    private ItemStack getEnchantIcon(@NotNull ExcellentEnchant enchant, int level) {
+    private ItemStack getEnchantIcon(@NotNull EnchantmentData enchant, int level) {
         return this.iconCache.computeIfAbsent(enchant.getId(), k -> new HashMap<>()).computeIfAbsent(level, k -> this.buildEnchantIcon(enchant, level));
     }
 
     @NotNull
-    private ItemStack buildEnchantIcon(@NotNull ExcellentEnchant enchant, int level) {
-        ItemStack icon = new ItemStack(Material.ENCHANTED_BOOK);
+    private ItemStack buildEnchantIcon(@NotNull EnchantmentData enchant, int level) {
+        ItemStack icon = new ItemStack(this.enchantIcon);
 
         List<String> conflicts = new ArrayList<>();
         if (enchant.hasConflicts()) {
             for (String line : this.enchantLoreConflicts) {
                 if (line.contains(GENERIC_NAME)) {
-                    enchant.getConflicts().stream().map(EnchantUtils::getLocalized).filter(Objects::nonNull).forEach(conf -> {
-                        conflicts.add(line.replace(GENERIC_NAME, conf));
-                    });
+                    enchant.getConflicts().stream()
+                        .map(EnchantUtils::getLocalized).filter(Objects::nonNull)
+                        .forEach(conf -> conflicts.add(line.replace(GENERIC_NAME, conf)));
+                    continue;
                 }
-                else conflicts.add(line);
+                conflicts.add(line);
             }
         }
 
         List<String> obtaining = new ArrayList<>();
-        for (String line : this.enchantLoreObtaining) {
-            if (line.contains(GENERIC_TYPE)) {
-                for (ObtainType obtainType : ObtainType.values()) {
-                    if (enchant.isObtainable(obtainType)) {
-                        obtaining.add(line.replace(GENERIC_TYPE, plugin.getLangManager().getEnum(obtainType)));
+        if (Config.isCustomDistribution()) {
+            for (String line : this.enchantLoreObtaining) {
+                if (line.contains(GENERIC_TYPE)) {
+                    for (DistributionWay distributionWay : DistributionWay.values()) {
+                        if (enchant.getDistributionOptions() instanceof CustomDistribution distribution) {
+                            if (!distribution.isDistributable(distributionWay)) continue;
+                        }
+
+                        obtaining.add(line.replace(GENERIC_TYPE, this.plugin.getLangManager().getEnum(distributionWay)));
                     }
+                    continue;
                 }
+                obtaining.add(line);
             }
-            else obtaining.add(line);
+        }
+
+        List<String> charges = new ArrayList<>();
+        if (enchant.isChargesEnabled()) {
+            for (String line : this.enchantLoreCharges) {
+                charges.add(line
+                    .replace(GENERIC_AMOUNT, NumberUtil.format(enchant.getChargesMax(level)))
+                    .replace(GENERIC_ITEM, ItemUtil.getItemName(enchant.getChargesFuel()))
+                );
+            }
         }
 
         ItemReplacer.create(icon).hideFlags().trimmed()
             .setDisplayName(this.enchantName)
             .setLore(this.enchantLoreMain)
-            .replaceLoreExact(PLACEHOLDER_CHARGES, enchant.isChargesEnabled() ? new ArrayList<>(this.enchantLoreCharges) : Collections.emptyList())
+            .replaceLoreExact(PLACEHOLDER_CHARGES, charges)
             .replaceLoreExact(PLACEHOLDER_CONFLICTS, conflicts)
             .replaceLoreExact(PLACEHOLDER_OBTAINING, obtaining)
-            .replaceLoreExact(ENCHANTMENT_DESCRIPTION, enchant.formatDescription())
             .replace(enchant.getPlaceholders(level))
-            .replace(Colorizer::apply)
             .writeMeta();
-
         return icon;
     }
 }
+
